--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/app.ts",
-    "start": "node dist/app.js",
+    "start": "node dist/app.ts",
     "build": "tsc"
   },
   "keywords": [],
