--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/app.ts",
-    "start": "node dist/app.ts",
+    "start": "node dist/app.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -158,5 +158,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node-geocoder": "^4.2.6"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.3"
   }
 }
